[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huni-utils"
version = "0.1.4"
authors = [
  { name="JeeHun Sung", email="jhun1023@naver.com" }
]
description = "frequently used utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "pyyaml (==6.0.1)",
    "pandas",
    "bumpver (==2023.1129)",
    "certifi (==2024.8.30)",
    "charset-normalizer (==3.3.2)",
    "click (==8.1.7)",
    "colorama (==0.4.6)",
    "distlib (==0.3.9)",
    "exceptiongroup (==1.3.0)",
    "fastjsonschema (==2.21.1)",
    "idna (==3.8)",
    "installer (==0.7.0)",
    "lexid (==2021.1006)",
    "looseversion (==1.3.0)",
    "mdurl (==0.1.2)",
    "nh3 (==0.2.18)",
    "packaging (==24.0)",
    "pyproject-hooks (==1.0.0)",
    "python-dateutil (==2.8.2)",
    "pytz (==2023.4)",
    "pywin32-ctypes (==0.2.3)",
    "requests-toolbelt (==1.0.0)",
    "rfc3986 (==2.0.0)",
    "rich (==13.8.1)",
    "shellingham (==1.5.4)",
    "six (==1.16.0)",
    "sniffio (==1.3.1)",
    "toml (==0.10.2)",
    "tomli (==2.0.1)",
    "trove-classifiers (==2025.5.9.12)",
    "tzdata (==2023.4)",
]

[project.urls]
Homepage = "https://github.com/huni1023/huni-utils"

[project.scripts]
huni_utils = "huniutils.__main__:main"


[tool.bumpver]
current_version = "2024.1002-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

