[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huni-utils"
version = "0.1.5"
authors = [
  { name="JeeHun Sung", email="jhun1023@naver.com" }
]
description = "frequently used utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "PyYaml",
    "pandas",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/huni1023/huni-utils"

[project.scripts]
huni_utils = "huniutils.__main__:main"


[tool.bumpver]
current_version = "2024.1002-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
